feat: ignore personal info if not on my machine
This will ignore my personal info (currently on gitconfig) under
`[user]` if the username of the machine is not `barra` (I assume it's
not me).

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,11 +1,11 @@
+{{ if eq .chezmoi.username "barra" -}}
 [user]
 	email = 57800056+barraIhsan@users.noreply.github.com
 	name = barraIhsan
 	signingkey = FF7D51EFEC75A00B
+{{- end }}
 [commit]
 	gpgsign = true
-[credential "https://github.com"]
-	username = barraIhsan
 [core]
 	editor = nvim -f
 [init]
