feat(git): move git config to xdg config dir

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -4,7 +4,7 @@
 	name = barraIhsan
 	signingkey = FF7D51EFEC75A00B
 [includeIf "hasconfig:remote.*.url:git@gitlab.com:*/**"]
-  path = ~/.gitconfig-gitlab
+  path = ~/.config/git/config-gitlab
 {{- end }}
 [commit]
 	gpgsign = true
