--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -1,11 +1,9 @@
-{{ if eq .chezmoi.username "barra" -}}
 [user]
 	email = 57800056+barraIhsan@users.noreply.github.com
 	name = barraIhsan
 	signingkey = FF7D51EFEC75A00B
 [includeIf "hasconfig:remote.*.url:git@gitlab.com:*/**"]
-  path = ~/.config/git/config-gitlab
-{{- end }}
+  path = ~/.config/git/gitlab
 [commit]
 	gpgsign = true
 [core]
